SMS sending check is True

--- a/Dehyari/App.config
+++ b/Dehyari/App.config
@@ -25,5 +25,6 @@
     <add name="DehyariContext1" connectionString="data source=.;initial catalog=DBDehyari;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="DehyariContext2" connectionString="data source=.;initial catalog=DBDehyari;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="DehyariContext3" connectionString="data source=.;initial catalog=DBDehyari;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="DehyariContext4" connectionString="data source=.;initial catalog=DBDehyari;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
